src/objects/LG_PortingProcess__c.object
<CustomObject>
    <fields>
        <fullName>LG_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Porting Processes</relationshipLabel>
        <relationshipName>Porting_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_CareAgentUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Agent User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Porting_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ChangeIndicator__c</fullName>
        <label>Change Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_ProcessChangeIndicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ContractId__c</fullName>
        <label>Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DateOfLastStageChange__c</fullName>
        <label>Date Of Last Stage Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_EscalationDate__c</fullName>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_NumberRangeService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Range Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Porting Processes (Number Range Service)</relationshipLabel>
        <relationshipName>Porting_Processes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_PortInProvider__c</fullName>
        <label>Port-In Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortInWishDate__c</fullName>
        <label>Port-In Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PortInWishTimeframe__c</fullName>
        <label>Port-In Wish Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZF1 – 6 bis 8 Uhr</fullName>
                </value>
                <value>
                    <fullName>ZF2 – 6 – 12</fullName>
                </value>
                <value>
                    <fullName>ZF3 – frei wählbar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PortOutDate__c</fullName>
        <label>Port-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PortOutProvider__c</fullName>
        <label>Port-Out Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortOutRequestType__c</fullName>
        <label>Port-Out Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PortOutWishDate__c</fullName>
        <label>Port-Out Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PostalCity__c</fullName>
        <label>Postal City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCountry__c</fullName>
        <label>Postal Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumberExtension__c</fullName>
        <label>Postal House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumber__c</fullName>
        <label>Postal House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalPostalCode__c</fullName>
        <label>Postal Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalStreet__c</fullName>
        <label>Postal Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Provider__c</fullName>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ResponseComment__c</fullName>
        <label>Response Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZWA</fullName>
                </value>
                <value>
                    <fullName>NAT</fullName>
                </value>
                <value>
                    <fullName>Terminverschiebung OK</fullName>
                </value>
                <value>
                    <fullName>Storno OK</fullName>
                </value>
                <value>
                    <fullName>RNG</fullName>
                </value>
                <value>
                    <fullName>ADFPLZ</fullName>
                </value>
                <value>
                    <fullName>ADFORT</fullName>
                </value>
                <value>
                    <fullName>ADFSTR</fullName>
                </value>
                <value>
                    <fullName>ADFHSNR</fullName>
                </value>
                <value>
                    <fullName>AIF</fullName>
                </value>
                <value>
                    <fullName>WAI</fullName>
                </value>
                <value>
                    <fullName>KNI</fullName>
                </value>
                <value>
                    <fullName>VAE</fullName>
                </value>
                <value>
                    <fullName>Projektkenner unbekannt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SFDCNumber__c</fullName>
        <label>SFDC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Clarification</fullName>
                    <default>true</default>
                    <label>Internal Clarification</label>
                </value>
                <value>
                    <fullName>Waiting for Customer</fullName>
                </value>
                <value>
                    <fullName>Order Complete</fullName>
                </value>
                <value>
                    <fullName>Waiting for Carrier</fullName>
                </value>
                <value>
                    <fullName>Response from Carrier</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SubResponse__c</fullName>
        <label>Sub-Response</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_Response__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAPLZ</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAPLZ und ADAORT</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAPLZ und ADASTR</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAPLZ und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAORT</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAORT und ADASTR</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAORT und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADASTR</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADASTR und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>ZWA und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAPLZ</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAPLZ und ADAORT</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAPLZ und ADASTR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAPLZ und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAORT</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAORT und ADASTR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAORT und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADASTR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADASTR und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>NAT und ADAHSNR</fullName>
                </value>
                <value>
                    <fullName>RNG und ADFPLZ</fullName>
                </value>
                <value>
                    <fullName>RNG und ADFORT</fullName>
                </value>
                <value>
                    <fullName>RNG und ADFSTR</fullName>
                </value>
                <value>
                    <fullName>RNG und ADFHSNR</fullName>
                </value>
                <value>
                    <fullName>RNG und AIF</fullName>
                </value>
                <value>
                    <fullName>RNG und AIFVorname</fullName>
                </value>
                <value>
                    <fullName>RNG und WAI</fullName>
                </value>
                <value>
                    <fullName>RNG und Sonstiges</fullName>
                </value>
                <value>
                    <fullName>RNG und VAE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SubStage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Clarification</fullName>
                    <default>true</default>
                    <label>Internal Clarification</label>
                </value>
                <value>
                    <fullName>Waiting for Customer</fullName>
                </value>
                <value>
                    <fullName>Response from Customer Pending</fullName>
                </value>
                <value>
                    <fullName>Response from Customer Pending Overdue</fullName>
                </value>
                <value>
                    <fullName>Period for Response from Customer Expired</fullName>
                </value>
                <value>
                    <fullName>Ready for Porting</fullName>
                </value>
                <value>
                    <fullName>Ready for Data Transmission</fullName>
                </value>
                <value>
                    <fullName>Installation not Performed</fullName>
                </value>
                <value>
                    <fullName>Transmission Failed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Carrier</fullName>
                </value>
                <value>
                    <fullName>Period for Response from Carrier Expired</fullName>
                </value>
                <value>
                    <fullName>Period for Response from Carrier Expired Overdue</fullName>
                </value>
                <value>
                    <fullName>Positive Confirmation</fullName>
                </value>
                <value>
                    <fullName>Temporal rejection</fullName>
                </value>
                <value>
                    <fullName>Final rejection</fullName>
                </value>
                <value>
                    <fullName>Closed by Agent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Processing Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_VoiceService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voice Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Porting Processes</relationshipLabel>
        <relationshipName>Porting_Processes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Porting Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LG_Account__c</columns>
        <columns>LG_CareAgentUser__c</columns>
        <columns>Type__c</columns>
        <columns>LG_Status__c</columns>
        <columns>LG_Stage__c</columns>
        <columns>LG_SubStage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>LG_Account__c</columns>
        <columns>LG_CareAgentUser__c</columns>
        <columns>Type__c</columns>
        <columns>LG_Stage__c</columns>
        <columns>LG_SubStage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Porting Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Porting Processes</pluralLabel>
    <recordTypes>
        <fullName>Port_In</fullName>
        <active>true</active>
        <label>Port-In</label>
    </recordTypes>
    <recordTypes>
        <fullName>Port_Out</fullName>
        <active>true</active>
        <label>Port-Out</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>